fixed typos, added chicken empanadas

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 </head>
 <body>
     <h1>Odin recipes</h1>
-    
-    <a href="/recipes/beef-pot-pie.html" alt="Beef pot pie recipie"> Beef pot pie</a>
+<ul>
+    <li><a href="/recipes/beef-pot-roast.html" alt="Beef pot roast recipie"> Beef pot roast</a></li>
+    <li><a href="/recipes/chicken-empanadas.html" alt="Chicken empanadas recipe">Chicken empanadas</a></li>
+    <li></li>
+</ul>
 </body>
 </html>
