--- a/recipes/beef-pot-roast.html
+++ b/recipes/beef-pot-roast.html
@@ -19,13 +19,34 @@
     <p>Takes around 3 hours to make.</p>
    
 <!-- Unordered Ingredients list -->
+ <ul>
+     <li>1 tablespoon vegetable oil</li>
+     <li>3 ½ pounds beef chuck pot roast</li>
+     <li>2 teaspoons of salt </li>
+     <li>1 teaspoon of ground black pepper</li>
+     <li>1 cup diced carrots</li>
+     <li>1 cup diced celery</li>
+     <li>1 cup diced onion</li>
+     <li>¼ cup butter</li>
+     <li>1 teaspoon of dried rosemary</li>
+ </ul>
 
 <!-- Ordered list step by step guide on how to make the dish -->
-    <p> Preheat oven to around 275Fº</p>
+<ol>
+    <li>Preheat oven to around 275Fº</li>
+    <li>Heat vegetable oil into a large oven-safe pot over medium-high heat. Season chuck roast with salt and black pepper. </li>
+    <li>Cook in hot oil until brown on both sides; transfer to a plate.</li>
+    <li>Add carrots, celery, and onion into the pot. Cook and stir until vegetables start to release their juices, scraping any brown flavor bits off the bottom of the pot, about 3 minutes. </li>
+    <li>Add butter, and cook until onions are translucent, about 5 minutes.</li>
+    <li>Sprinkle in rosemary; return roast to the pot and cover. </li>
+    <li>Roast in the preheated oven until the chuck roast is tender, about 2 1/2 to 3 hours. </li>
+    <li>Season vegetables with additional salt and black pepper, if desired. </li>
+</ol>
 
 
 
 <!-- tribbutes -->
+ <h2>Tribbutes to the original recipe!!! please give them a visit</h2>
  <a href="//www.allrecipes.com/recipe/219173/simple-beef-pot-roast/" target="_blank" rel="noopener"> Original recipe</a>
 </body>
 </html>
