Created Jalapeno popper recipe fixed typos added pages to the index ul added tributes to the original recipes

--- a/recipes/beef-pot-roast.html
+++ b/recipes/beef-pot-roast.html
@@ -19,6 +19,7 @@
     <p>Takes around 3 hours to make.</p>
    
 <!-- Unordered Ingredients list -->
+ <h2>Ingredients</h2>
  <ul>
      <li>1 tablespoon vegetable oil</li>
      <li>3 ½ pounds beef chuck pot roast</li>
@@ -32,6 +33,7 @@
  </ul>
 
 <!-- Ordered list step by step guide on how to make the dish -->
+ <h2>Step by step guide</h2>
 <ol>
     <li>Preheat oven to around 275Fº</li>
     <li>Heat vegetable oil into a large oven-safe pot over medium-high heat. Season chuck roast with salt and black pepper. </li>
