--- a/recipes/chicken-empanadas.html
+++ b/recipes/chicken-empanadas.html
@@ -18,6 +18,7 @@
    
    
 <!-- Unordered Ingredients list -->
+ <h2>Ingredients</h2>
 <ul>
     <li>2 tablespoons olive oil</li>
 
@@ -70,6 +71,7 @@
 
 
 <!-- Ordered list step by step guide on how to make the dish -->
+ <h2>Step by step guide</h2>
     <ol>
         <li>Gather all ingredients. </li>
        
