--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
     <h1>Odin recipes</h1>
 <ul>
-    <li><a href="/recipes/beef-pot-roast.html" alt="Beef pot roast recipie"> Beef pot roast</a></li>
-    <li><a href="/recipes/chicken-empanadas.html" alt="Chicken empanadas recipe">Chicken empanadas</a></li>
-    <li><a href="/recipes/jalapeno-popper-potato-skins.html" alt="Jalapeno Popper Potato Skins"> Jalapeno Popper Potato Skins</a></li>
+    <li><a href="recipes/beef-pot-roast.html" alt="Beef pot roast recipie"> Beef pot roast</a></li>
+    <li><a href="recipes/chicken-empanadas.html" alt="Chicken empanadas recipe">Chicken empanadas</a></li>
+    <li><a href="recipes/jalapeno-popper-potato-skins.html" alt="Jalapeno Popper Potato Skins"> Jalapeno Popper Potato Skins</a></li>
 </ul>
 </body>
 </html>
